tests/invalid_purity/pragma_c_and_mercury.err_exp
pragma_c_and_mercury.m:012: In predicate `c_int_unify'/2:
pragma_c_and_mercury.m:012:   purity error: predicate is impure.
pragma_c_and_mercury.m:012:   It must be declared `impure' or promised pure.
